# uiart

./: Cargo.toml  README.md  data_generator.js
src/: app.rs  data.json  main.rs  navigation.rs  point.rs  ui_bounding_box.rs  vscode_ui.json
windows-bindings/: build.rs
