[package]
name = "uiart"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sdl2 = "0.34.5"

[target.'cfg(windows)'.dependencies]
windows-bindings = { path = "windows-bindings" }